# advent-of-code-2024

./: .gitignore
clojure/: .gitignore  deps.edn
clojure/src/: blah.clj  day1.clj  day2.clj  day3.clj
clojure/src/aoc2024/: core.clj
haskell/: aoc2024.cabal  shell.nix
haskell/src/: AoC2024.hs
