cabal-version:      3.0
name:               aoc2024
version:            0.1.0.0

library
    ghc-options: -Wall -O
    exposed-modules:  AoC2024
    default-extensions: TemplateHaskell, OverloadedStrings
    build-depends:    
      base,
      comonad,
      containers,
      lens,
      linear,
      megaparsec,
      mtl,
      multimap,
      parsec,
      safe,
      text ^>= 2.1.2,
      transformers,
      vector-space,
    hs-source-dirs:   src
    default-language: GHC2021

